<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">On Track</string>
    <string name="city_state">City, State</string>
    <string name="_70">70°</string>
    <string name="weather_description">Weather Description</string>
    <string name="upcoming_assignments">Upcoming Assignments</string>
    <string name="_3">3</string>
    <string name="_75">75</string>
    <string name="cups_of_water">Cups of Water</string>
    <string name="minutes_of_activity">Minutes of Activity</string>
    <string name="update">Update</string>
    <string name="todo">TODO</string>
    <string name="new_assignment">New Assignment</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="assignment_notes">Assignment Notes</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="set_priority">Set Priority</string>
    <string name="file_name">assignments.json</string>
    <string name="no_file">no file</string>
    <string name="className">Class:</string>
    <string name="editAssignment">Edit Assignment</string>
    <string name="go">Go</string>
    <string name="search_by_keyword_class_or_name">Search by Keyword (Class or Name)</string>
    <string name="search_by_due_date">Search by Due Date</string>
    <string name="earliest_to_latest_due">Earliest to Latest Due</string>
    <string name="latest_to_earliest_due">Latest to Earliest Due</string>
    <string name="highest_to_lowest_priority">Highest to Lowest Priority</string>
    <string name="lowest_to_highest_priority">Lowest to Highest Priority</string>
    <string name="create_new_assignment">Create New Assignment</string>
    <string name="_3_5">3/5</string>
    <string name="_55_100">55/100</string>
    <string name="add_water">Add Water</string>
    <string name="add_activity">Add Activity</string>
    <string name="daily_goals">Daily Goals</string>
    <string name="time">Time:</string>
    <string name="keyword">Keyword:</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="minutes">Minutes</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="keywordjjjjj">Keyword</string>
    <string name="home">Home</string>
    <string name="assignments">Assignments</string>
    <string name="weather">Weather</string>
    <string name="health_center">Health Center</string>
    <string name="settings">Settings</string>
    <string name="health.json">healthFileName</string>
    <string name="new_activity">New Activity</string>
    <string name="run_walk_cycling_weights">Run, Walk, Cycling, Weights</string>
    <string name="activity_notes">Activity Notes</string>
    <string name="edit_activity">Edit Activity</string>
</resources>