<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_NewAssignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/new_assignment"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_NewAssignment"
        app:layout_constraintTop_toBottomOf="@+id/text_NewAssignment" />

    <TextView
        android:id="@+id/text_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/date"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_Name"
        app:layout_constraintTop_toBottomOf="@+id/text_Name" />

    <TextView
        android:id="@+id/text_Class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/className"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_Date"
        app:layout_constraintTop_toBottomOf="@+id/text_Date" />

    <EditText
        android:id="@+id/edit_Name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/text_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_Name"
        app:layout_constraintTop_toTopOf="@+id/text_Name"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edit_Date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/text_Date"
        app:layout_constraintEnd_toEndOf="@+id/edit_Name"
        app:layout_constraintStart_toEndOf="@+id/text_Date"
        app:layout_constraintTop_toTopOf="@+id/text_Date"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edit_Class"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/text_Class"
        app:layout_constraintEnd_toEndOf="@+id/edit_Date"
        app:layout_constraintStart_toEndOf="@+id/text_Class"
        app:layout_constraintTop_toTopOf="@+id/text_Class"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_AssNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/assignment_notes"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/text_NewAssignment"
        app:layout_constraintTop_toBottomOf="@+id/text_Class" />

    <EditText
        android:id="@+id/edit_Notes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#CCE8FD"
        android:editable="true"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button_AddAssignment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_AssNotes"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_AddAssignment"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:text="@string/add_assignment"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/rad_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_SetPriority"
        app:layout_constraintTop_toBottomOf="@+id/text_SetPriority">

        <RadioButton
            android:id="@+id/rad_Low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/rad_Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/rad_High"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high" />

    </RadioGroup>

    <TextView
        android:id="@+id/text_SetPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_priority"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/text_AssNotes"
        app:layout_constraintTop_toTopOf="@+id/button_AddAssignment" />

</androidx.constraintlayout.widget.ConstraintLayout>